static/style.css
@font-face {
    font-family: "Monomath";
    
    src: url('assets/fonts/monomath-light.ttf');
    src: url('assets/fonts/monomath-light.ttf') format('truetype');
    
    font-weight: normal;
    font-style:  normal;
}





nav {
    background-color: rgb(0, 0, 0);
}

header {
    padding-top: 5.5rem;
    background-color: rgb(22, 70, 22);
}

footer {
    background-color: rgb(0, 0, 0);
}

.navbar-brand b {
  margin: 0;
  padding: 0;
  display: inline-block;
}

.navbar-brand img {
  margin: 0.25rem;
  padding: 0;
  display: inline-block;
}

.navbar-nav .nav-item .nav-link {
    color: rgb(255, 255, 255)
}

.navbar-nav .nav-item .nav-link:hover {
    color: rgb(33, 151, 33);
}

.navbar-nav .nav-item .nav-link.active {
    color: rgb(33, 151, 33);
    text-decoration: underline;
}






html, body {
    background-color: rgb(22, 22, 22);

    color: rgb(212, 212, 212);
    
    font-family: "Monomath";
    
    height: 100%;

    margin-left:   0px;
    margin-right:  0px;
}

body {
    display: flex;
    flex-direction: column;
}

main {
    flex: 1;
}

hr {
    border: 1px solid rgb(212, 212, 212);

    margin-top:    12px;
    margin-bottom: 12px;

    padding-top:    0px;
    padding-bottom: 0px;
}

h1 {
    font-weight: bold;
    font-size:   2.5rem;
}

h2 {
    font-weight: bold;
    font-size:   1.5rem;
}

h3 {
    font-weight: bold;
    font-size:   1.25rem;
}

h4 {
    font-weight: bold;
    font-size:   1.0rem;
}

h5 {
    font-weight: bold;
    font-size:   0.75rem;
}

pre {
    display: block;

    resize: none;
    overflow: hidden;
    max-width: 100%;

    background-color:rgb(30, 30, 30);

    color: rgb(212, 212, 212);
    
    font-family: "Monomath";

    margin-top:    12px;
    margin-bottom: 12px;
    margin-left:   0px;
    margin-right:  0px;
}

math {
    display: block;

    resize: none;
    overflow: hidden;
    max-width: 100%;

    background-color:rgb(22, 22, 22);

    color: rgb(212, 212, 212);
    
    font-family: "Monomath";

    white-space: pre;

    margin-top:    12px;
    margin-bottom: 12px;
    margin-left:   0px;
    margin-right:  0px;
}

sub {
    font-size: 0.50em;
}

sup {
    font-size: 0.50em;
}

.editable {
    outline: none !important;
}

.editable:focus {
    box-shadow: 0 0 10px;
}

